samples/test4.mine.out

*** Error line 4.
  int y = x;
  ^^^
*** syntax error

