samples/test4.glsl
int x = 5;

int func(int x){
  int y = x;
  if(x){
     y=0;
  }

}
